--- a/Gauri-Resume.html
+++ b/Gauri-Resume.html
@@ -1,258 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gauri Vivek Thombare - Resume</title>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
-            line-height: 1.4;
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .header-name {
-            font-size: 24px;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
-        .header-contact {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 5px;
-            font-size: 14px;
-        }
-        .divider {
-            border-top: 1px solid black;
-            margin-top: 5px;
-            margin-bottom: 20px;
-        }
-        .container {
-            display: flex;
-            width: 100%;
-            height: 100vh;
-        }
-        .left-column {
-            width: 50%;
-            padding: 20px;
-            border-right: 1px solid black;
-            box-sizing: border-box;
-        }
-        .right-column {
-            width: 50%;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .section-title {
-            font-size: 18px;
-            font-weight: bold;
-            text-transform: uppercase;
-            padding-bottom: 5px;
-            border-bottom: 1px solid black;
-            margin-bottom: 10px;
-        }
-        ul, p {
-            margin: 0;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 5px;
-        }
-        .job-title {
-            font-weight: bold;
-        }
-        .job-meta {
-            font-style: italic;
-            margin-bottom: 5px;
-        }
-        .education-item {
-            margin-bottom: 10px;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gauri Vivek Thombare - Resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
-        /* Modal Styles */
-        .modal {
-            display: none; 
-            position: fixed; 
-            z-index: 1; 
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.4);
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 400px;
-            text-align: center;
-            border-radius: 8px;
-        }
-        .modal-buttons {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-        .modal-button {
-            padding: 10px 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .modal-button:hover {
-            background-color: #f0f0f0;
-        }
+  <style>
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #f3f4f6;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-size: 0.85rem;
+}
 
-        /* Hide modal and buttons during print */
-        @media print {
-            .modal, .modal-button {
-                display: none;
-            }
-        }
-    </style>
+.resume-container {
+  width: 100%;
+  max-width: 900px;
+  background-color: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.left-column, .right-column {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 10px 10px 10px;
+}
+
+h1 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #1f2937;
+  text-align: center;
+  width: 100%;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 10px 0 6px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2px;
+  color: #1f2937;
+}
+
+h3 {
+  font-size: 0.95rem;
+  font-weight: 600;
+  margin-top: 8px;
+  color: #374151;
+}
+
+p, li {
+  font-size: 0.85rem;
+  line-height: 1.3;
+  color: #4b5563;
+  text-align: justify;
+  margin: 0 0 4px;
+}
+
+ul {
+  list-style-type: disc;
+  margin-left: 16px;
+  padding-left: 0;
+}
+
+.contact-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 0 10px;
+}
+
+.contact-item {
+  width: 48%;
+  font-size: 0.85rem;
+  color: #4b5563;
+}
+
+.contact-item.left {
+  text-align: left;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-item.right {
+  text-align: right;
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-content {
+  background: white;
+  padding: 16px;
+  border-radius: 6px;
+  text-align: center;
+  max-width: 400px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+@media print {
+  body {
+    background-color: white;
+    margin: 0;
+    padding: 0;
+  }
+
+  .modal-overlay {
+    display: none !important;
+  }
+
+  .resume-container {
+    box-shadow: none;
+    padding: 10px;
+  }
+}
+  </style>
 </head>
 <body>
+  <!-- Modal -->
+  <div id="actionModal" class="modal-overlay">
+    <div class="modal-content">
+      <h2 class="text-lg font-semibold text-gray-800 mb-4">Choose Action</h2>
+      <p class="text-gray-600 mb-6">Would you like to Print or Download the resume?</p>
+      <div class="flex justify-center space-x-4 mb-4">
+        <button onclick="handleAction('print')" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">Print</button>
+        <button onclick="handleAction('download')" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Download</button>
+      </div>
+      <button onclick="closeModal()" class="text-sm text-gray-500 hover:text-gray-700 underline">Close</button>
+    </div>
+  </div>
 
-<div class="header">
-    <div class="header-name">Gauri Vivek Thombare</div>
-    <div class="header-contact">
-        <div>gaurithombare123@gmail.com</div>
-        <div>9833694179</div>
-    </div>
-    <div class="divider"></div>
+  <!-- Resume Content -->
+  <div class="resume-container" id="resume">
+    <h1>GAURI VIVEK THOMBARE</h1>
+
+  <!-- Contact Info Grid -->
+ <div class="contact-grid">
+  <div class="contact-item left">
+    <strong>Email:</strong>
+    gaurithombare123@gmail.com
+  </div>
+  <div class="contact-item right">
+    <strong>Phone:</strong>
+    9833694179
+  </div>
 </div>
 
-<div class="container">
-    <div class="left-column">
-        <!-- Skills -->
-        <div class="section">
-            <h2 class="section-title">Skills</h2>
-            <ul>
-                <li>MS Office Suite</li>
-                <li>Canva</li>
-                <li>Verbal & Written Communication</li>
-                <li>Analytical & Problem Solving</li>
-                <li>Multitasking & Time Management</li>
-                <li>Attention to Detail</li>
-                <li>Handling Confidential Information</li>
-                <li>Quick Learner</li>
-                <li>English Typing (30 WPM)</li>
-            </ul>
-        </div>
 
-        <!-- Education -->
-        <div class="section">
-            <h2 class="section-title">Education</h2>
-            <div class="education-item">
-                <p><strong>Qualification:</strong> BMS (MARKETING)</p>
-                <p><strong>College / Uni:</strong> SOUTH INDIAN ASSOCIATION OF HIGHER EDUCATION</p>
-                <p><strong>Result:</strong> 7.57 CGPI</p>
-                <p><strong>Passing Year:</strong> 2022</p>
-            </div>
-            <div class="education-item">
-                <p><strong>Qualification:</strong> H.S.C</p>
-                <p><strong>College / Uni:</strong> MUMBAI BOARD</p>
-                <p><strong>Result:</strong> 63%</p>
-                <p><strong>Passing Year:</strong> 2019</p>
-            </div>
-            <div class="education-item">
-                <p><strong>Qualification:</strong> S.S.C</p>
-                <p><strong>College / Uni:</strong> MUMBAI BOARD</p>
-                <p><strong>Result:</strong> 71%</p>
-                <p><strong>Passing Year:</strong> 2017</p>
-            </div>
-        </div>
-    </div>
 
-    <div class="right-column">
-        <!-- Objective -->
-        <div class="section">
-            <h2 class="section-title">Objective</h2>
-            <p>Seeking challenging opportunities with a reputed organization to leverage my skills in HR and administrative support, contributing to organizational growth and gaining higher responsibilities.</p>
-        </div>
+    <!-- Left Column -->
+    <div class="left-column">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>BMS (Marketing)</strong>, South Indian Association of Higher Education (2022)</li>
+        <li><strong>H.S.C</strong>, Mumbai Board (2019)</li>
+        <li><strong>S.S.C</strong>, Mumbai Board (2017)</li>
+      </ul>
 
-        <!-- Professional Experience -->
-        <div class="section">
-            <h2 class="section-title">Professional Experience</h2>
-            <div class="job-entry">
-                <div class="job-title">HR Admin</div>
-                <div class="job-meta">Onkar E-Learnings Solutions Pvt Ltd. | March 2025 - Present</div>
-                <ul style="list-style-type: square; padding-left: 20px; margin-top: 5px;">
-                    <li>Managed end-to-end HR processes including candidate sourcing, interview coordination, and the selection process.</li>
-                    <li>Oversaw new employee onboarding and orientation, ensuring all documentation was complete and accurate.</li>
-                    <li>Maintained comprehensive employee records and managed leave and attendance records using HRMS tools.</li>
-                    <li>Provided extensive administrative support, handling office supplies, managing facility needs, and coordinating with clients.</li>
-                    <li>Ensured strict adherence to company policies and assisted with labor law compliance.</li>
-                    <li>Organized and facilitated employee engagement activities, including training programs and team-building events.</li>
-                    <li>Handled a wide range of general coordination tasks, adapting to changing priorities and assisting cross-departmentally.</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+      <h2>Skills</h2>
+      <ul>
+        <li>MS Office Suite</li>
+        <li>Canva</li>
+        <li>Verbal & Written Communication</li>
+        <li>Analytical & Problem Solving</li>
+        <li>Multitasking & Time Management</li>
+        <li>Attention to Detail</li>
+        <li>Handling Confidential Information</li>
+        <li>Quick Learner</li>
+        <li>English Typing (30 WPM)</li>
+      </ul>
+    </div>
 
-<!-- The Modal -->
-<div id="actionModal" class="modal">
-    <div class="modal-content">
-        <h3>Resume Actions</h3>
-        <p>What would you like to do with your resume?</p>
-        <div class="modal-buttons">
-            <button onclick="window.print()" class="modal-button">Print</button>
-            <button onclick="downloadResume()" class="modal-button">Download</button>
-            <button onclick="document.getElementById('actionModal').style.display='none'" class="modal-button">Close</button>
-        </div>
-    </div>
-</div>
+    <!-- Right Column -->
+    <div class="right-column">
+      <h2>Objective</h2>
+      <p>Seeking challenging opportunities with a reputed organization to leverage my skills in HR and administrative support, contributing to organizational growth and gaining higher responsibilities.</p>
 
-<script>
-    // Function to download the resume as an HTML file
-    function downloadResume() {
-        // Create a temporary link element
-        const a = document.createElement('a');
-        
-        // Get the full HTML content of the page, excluding the modal itself
-        const resumeContent = document.documentElement.outerHTML.replace(/<div id="actionModal"[^>]*>[\s\S]*?<\/div>/, '');
+      <h2>Professional Experience</h2>
+      <h3>HR Admin | Onkar E-Learnings Solutions Pvt Ltd.</h3>
+      <p><em>March 2025 — Present</em></p>
+      <ul>
+        <li>Managed end-to-end HR processes including candidate sourcing, interview coordination, and the selection process.</li>
+        <li>Oversaw new employee onboarding and orientation, ensuring all documentation was complete and accurate.</li>
+        <li>Maintained comprehensive employee records and managed leave and attendance records using HRMS tools.</li>
+        <li>Provided extensive administrative support, handling office supplies, managing facility needs, and coordinating with clients.</li>
+        <li>Ensured strict adherence to company policies and assisted with labor law compliance.</li>
+        <li>Organized and facilitated employee engagement activities, including training programs and team-building events.</li>
+        <li>Handled a wide range of general coordination tasks, adapting to changing priorities and assisting cross-departmentally.</li>
+      </ul>
+    </div>
+  </div>
 
-        // Create a Blob from the HTML content
-        const blob = new Blob([resumeContent], { type: 'text/html' });
+  <script>
+    function handleAction(action) {
+      // Hide the modal immediately after an action is selected
+      document.getElementById('actionModal').style.display = 'none';
 
-        // Create a URL for the Blob
-        const url = URL.createObjectURL(blob);
+      if (action === 'print') {
+        // Call the native print dialog
+        window.print();
+      } else if (action === 'download') {
+        // Use html2pdf.js to generate and download a PDF
+        const element = document.getElementById('resume');
+        const options = {
+          margin: 0.1,
+          filename: 'Gauri-Vivek-Thombare-Resume.pdf',
+          image: { type: 'jpeg', quality: 1 },
+          html2canvas: { scale: 2 },
+          jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+        };
+        html2pdf().set(options).from(element).save();
+      }
+    }
 
-        // Set the link's href and filename
-        a.href = url;
-        a.download = 'Gauri_Vivek_Thombare_Resume.html';
+    function closeModal() {
+      document.getElementById('actionModal').style.display = 'none';
+    }
 
-        // Append the link to the body and click it to trigger the download
-        document.body.appendChild(a);
-        a.click();
-        
-        // Clean up by removing the link and revoking the URL
-        document.body.removeChild(a);
-        URL.revokeObjectURL(url);
-
-        // Hide the modal
-        document.getElementById('actionModal').style.display = 'none';
-    }
-
-    // Show the modal when the document loads
-    window.onload = function() {
-        document.getElementById('actionModal').style.display = 'block';
-    };
-</script>
-
+    // Show the modal when the document loads
+    window.onload = () => {
+      document.getElementById('actionModal').style.display = 'flex';
+    };
+  </script>
 </body>
 </html>
