--- a/theme1.html
+++ b/theme1.html
@@ -30,7 +30,7 @@
         }
 
         /* Container - Simulates a folded paper */
-        #newspaper-container {
+        newspaper-container {
             max-width: 1200px;
             margin: 20px auto;
             background-color: var(--color-paper);
@@ -69,7 +69,7 @@
         }
 
         /* Masthead Styling (The Title/Banner) */
-        #masthead {
+        masthead {
             text-align: center;
             padding-bottom: 1rem;
             border-bottom: 5px solid var(--color-ink);
@@ -310,9 +310,9 @@
                     <p class="text-center text-sm mb-3">I'm always open to new opportunities and collaborations. Feel free to reach out!</p>
                     <p class="text-center font-bold text-xl font-headline mb-3">adityabarve28@gmail.com</p>
                     <div class="flex justify-center space-x-4">
-                        <a href="#" class="text-gray-700 hover:text-red-700 font-headline font-bold">LinkedIn</a>
+                        <a href="https://linkedin.com/in/aditya-barve-fswd" class="text-gray-700 hover:text-red-700 font-headline font-bold">LinkedIn</a>
                         <span>|</span>
-                        <a href="#" class="text-gray-700 hover:text-red-700 font-headline font-bold">GitHub</a>
+                        <a href="https://github.com/adityabarve28" class="text-gray-700 hover:text-red-700 font-headline font-bold">GitHub</a>
                     </div>
                 </div>
 
@@ -333,7 +333,7 @@
                     <div class="project-item">
                         <h4 class="font-bold font-headline text-lg">EmpowerMental</h4>
                         <p class="text-sm">A web application designed to support mental well-being. Showcases full-stack development, focusing on user interaction and data management.</p>
-                        <a href="#" class="article-link text-sm italic">View Project →</a>
+                        <a href="https://empowermental.co.in/" class="article-link text-sm italic">View Project →</a>
                     </div>
 
                     <div class="rule-h-thin"></div>
@@ -341,7 +341,7 @@
                     <div class="project-item">
                         <h4 class="font-bold font-headline text-lg">Codechieve</h4>
                         <p class="text-sm">A modern freelance web development platform offering custom websites, landing pages, and business-ready digital solutions. Built for performance and clean design.</p>
-                        <a href="#" class="article-link text-sm italic">View Project →</a>
+                        <a href="https://codechieve.com" class="article-link text-sm italic">View Project →</a>
                     </div>
 
                     <div class="rule-h-thin"></div>
@@ -379,7 +379,7 @@
                     <div class="project-item !border-accent">
                         <h4 class="font-bold font-headline text-2xl">Culinary Destination: Online Dine-In System</h4>
                         <p class="text-base">A full-scale online dine-in ordering system for restaurants. Features include a dedicated ordering section for customers, an admin panel to manage the menu and view orders, and a **fully functional, visually appealing sales analytical dashboard**. This project provides a complete e-commerce solution for the food industry.</p>
-                        <a href="#" class="cta-button mt-4">View Consumer Dashboard →</a>
+                        <a href="https://hoteltest.empowermental.co.in/" class="cta-button mt-4">View Consumer Dashboard →</a>
                     </div>
                 </div>
 
