--- a/theme3.html
+++ b/theme3.html
@@ -325,7 +325,7 @@
                     <p class="text-sm mb-4" style="color: var(--text-secondary);">
                         A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.
                     </p>
-                    <a href="#" class="hover-link font-semibold text-sm inline-flex items-center">
+                    <a href="https://empowermental.co.in/" class="hover-link font-semibold text-sm inline-flex items-center">
                         View Project 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-1 w-4 h-4"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
                     </a>
@@ -338,7 +338,7 @@
                     <p class="text-sm mb-4" style="color: var(--text-secondary);">
                         A modern freelance web development platform offering custom websites, landing pages, and business-ready digital solutions. Codechieve helps businesses build their online presence.
                     </p>
-                    <a href="#" class="hover-link font-semibold text-sm inline-flex items-center">
+                    <a href="https://codechieve.com" class="hover-link font-semibold text-sm inline-flex items-center">
                         View Project 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-1 w-4 h-4"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
                     </a>
@@ -351,7 +351,7 @@
                     <p class="text-sm mb-4" style="color: var(--text-secondary);">
                         A full-scale online dine-in ordering system for restaurants, featuring ordering for customers, an admin panel, and a **visually appealing sales analytical dashboard**.
                     </p>
-                    <a href="#" class="cta-button" style="background-color: var(--accent); color: var(--bg-primary); padding: 0.5rem 1rem; font-size: 0.9rem; border-radius: 4px;">
+                    <a href="https://hoteltest.empowermental.co.in/" class="cta-button" style="background-color: var(--accent); color: var(--bg-primary); padding: 0.5rem 1rem; font-size: 0.9rem; border-radius: 4px;">
                         View Consumer Dashboard →
                     </a>
                 </div>
@@ -401,10 +401,10 @@
                 <p class="pt-4 text-sm font-semibold" style="color: var(--text-secondary);">Connect with me on:</p>
                 <div class="flex justify-center space-x-6">
                     <!-- Placeholder Icons for Social Links -->
-                    <a href="#" class="hover-link" title="LinkedIn">
+                    <a href="https://linkedin.com/in/aditya-barve-fswd" class="hover-link" title="LinkedIn">
                          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect width="4" height="12" x="2" y="9"/><circle cx="4" cy="4" r="2"/></svg>
                     </a>
-                    <a href="#" class="hover-link" title="GitHub">
+                    <a href="https://github.com/adityabarve28" class="hover-link" title="GitHub">
                          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 3c0-1.74-2.67-1.74-2.67-1.74s-2.7 1.74-2.67 1.74A5.44 5.44 0 0 0 10.14 8.5v3.87a3.37 3.37 0 0 0-.94 2.61c0 5.45-3.3 6.64-6.44 7a3.37 3.37 0 0 0-2.61.94"/></svg>
                     </a>
                 </div>
