--- a/Aditya-Barve-Resume.html
+++ b/Aditya-Barve-Resume.html
@@ -232,9 +232,9 @@ Implemented functionalities for user authentication, financial goal tracking, an
       <p><strong>Technologies:</strong>  HTML, CSS, Bootstrap, Spring Boot, Hibernate, MySQL, Maven, Thymeleaf</p>
       <h2>Education</h2>
       <ul>
-        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024)</li>
-        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021)</li>
-        <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li>
+        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024), <b>7.2 CGPI</b></li>
+        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021) <b>~87%</b></li>
+        <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017) <b></b></li>
       </ul>
     </div>
   </div>
