--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -230,8 +230,8 @@ ul {
       </ul>
        <h2>Education</h2>
       <ul>
-        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, Bachelor of Engineering (Information Technology), Dombivli (2021-2024)</li>
-        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma in Information Technology, Asangaon (2017-2021)</li>
+        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, Bachelor of Engineering (Information Technology), Dombivli (2021-2024) <b>7.2 CGPI</b></li>
+        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma in Information Technology, Asangaon (2017-2021 <b>~87%</b>)</li>
         <li><strong>Shakuntala Vidyalaya</strong>, Secondary School Certificate (SSC) — Shakuntala Vidyalaya (2016–2017)</li>
       </ul>
     </div>
