--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             </div>
             <div class="card p-6">
                 <img src="https://placehold.co/600x350/E0E0E0/4A90E2?text=Mycreations" alt="Mycreations Project" class="rounded-lg mb-4 w-full">
-                <h4 class="text-2xl font-semibold text-gray-800 mb-2">Mycreations</h4>
+                <h4 class="text-2xl font-semibold text-gray-800 mb-2">Mycreations (Project Under-Development)</h4>
                 <p class="text-gray-700 mb-4 project-description">
                     A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.
                 </p>
@@ -539,6 +539,7 @@
     </script>
 </body>
 </html>
+
 
 
 
