--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </p>
             </div>
             <div class="flex justify-center">
-                <img src="https://placehold.co/400x400/E0E0E0/4A90E2?text=Aditya+Barve" alt="Aditya Barve Profile" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-gray-300 shadow-lg">
+                <img src="Gemini_Generated_Image_sptoesptoesptoes.png" alt="Aditya Barve Profile" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-gray-300 shadow-lg">
             </div>
         </div>
     </section>
@@ -539,6 +539,7 @@
     </script>
 </body>
 </html>
+
 
 
 
