--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -164,8 +164,8 @@ ul {
   <!-- Contact Info Grid -->
  <div class="contact-grid">
   <div class="contact-item left">
-    <strong>LinkedIn:</strong>
-    linkedin.com/in/aditya-barve-fswd
+    <strong>Location:</strong>
+    Dombivli - 421201
   </div>
   <div class="contact-item right">
     <strong>Phone:</strong>
@@ -230,6 +230,12 @@ ul {
         <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024), <b>7.2 CGPI</b></li>
         <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021), <b>~87%</b></li>
         <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li>
+      </ul>
+      <h2>Socials</h2>
+      <ul>
+        <li><strong>LinkedIn</strong>https://linkedin.com/in/aditya-barve-fswd</li>
+        <li><strong>GitHub</strong>https://github.com/adityabarve28</b></li>
+        <!-- <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li> -->
       </ul>
 <!--       <h3>Mycreations</h3>
       <p>A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
