--- a/index.html
+++ b/index.html
@@ -285,9 +285,20 @@
     <section id="experience" class="py-16 md:py-24 container mx-auto px-6">
         <h2 class="text-4xl font-bold section-header mb-8">Experience</h2>
         <div class="card p-8">
+            <h3 class="text-3xl font-bold text-gray-800 mb-2">Software Developer</h3>
+            <p class="text-xl text-gray-600 mb-2">G-Ordinateur Pvt. Ltd.</p>
+            <p class="text-md text-gray-500 mb-4"><strong>Start :</strong> February 02 2026 &mdash; <strong>Present</strong></p>
+            <p class="text-lg text-gray-700 mb-4">
+                As a Software Developer, I am responsible for developing and maintaining web applications using PHP and Laravel.
+            </p>
+            <!-- <ul class="list-disc list-inside text-gray-700 space-y-2 ml-4">
+                <li>Developing and Maintaining Current Web Applications</li>
+            </ul> -->
+        </div>
+        <div class="card p-8">
             <h3 class="text-3xl font-bold text-gray-800 mb-2">PHP Developer</h3>
             <p class="text-xl text-gray-600 mb-2">Onkar E Learnings & Solutions LLP</p>
-            <p class="text-md text-gray-500 mb-4"><strong>Start :</strong> March 01 2025 &mdash; <strong>Present</strong></p>
+            <p class="text-md text-gray-500 mb-4"><strong>Start :</strong> March 01 2025 &mdash; <strong>January 24 2026</strong></p>
             <p class="text-lg text-gray-700 mb-4">
                 As a PHP Developer, I am responsible for developing and maintaining web applications using PHP and Laravel. My role involved:
             </p>
@@ -539,6 +550,7 @@
     </script>
 </body>
 </html>
+
 
 
 
