--- a/Aditya-Barve-Resume.html
+++ b/Aditya-Barve-Resume.html
@@ -218,8 +218,19 @@ Implemented functionalities for user authentication, financial goal tracking, an
     <!-- Right Column -->
     <div class="right-column">
       <h2>Experience</h2>
+      <h3>Software Developer | G-Ordinateur Pvt Ltd.</h3>
+      <p><em>February 01, 2026 — Present</em></p>
+      <ul>
+        <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
+        <!-- <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
+        <li>Built and integrated APIs for various functionalities.</li>
+        <li>Implemented payment gateway integrations for e-commerce solutions.</li>
+        <li>Managed server environments (CPanel, AApanel, VPS, Shared Hosting) and DNS configurations.</li>
+        <li>Engaged directly with clients to understand requirements and provide solutions.</li>
+        <li>Demonstrated leadership in project execution and problem-solving.</li> -->
+      </ul>
       <h3>PHP Developer | Onkar E Learnings & Solutions LLP</h3>
-      <p><em>March 01, 2025 — Present</em></p>
+      <p><em>March 01, 2025 — Jabuary 24, 2026</em></p>
       <ul>
         <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
         <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
