--- a/index.html
+++ b/index.html
@@ -442,16 +442,16 @@
             <div class="flex flex-col sm:flex-row justify-center gap-4">
                 <a href="/portfolio/Aditya-Barve-Resume.html"
                    class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition">
-                    Download All In 1 Resume
+                    Download / View / Print Resume
                 </a>
-                <a href="/portfolio/Aditya-Barve-PHP-Resume.html"
+                <!-- <a href="/portfolio/Aditya-Barve-PHP-Resume.html"
                    class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition">
                     Download PHP Resume
                 </a>
                 <a href="/portfolio/Aditya-Barve-JAVA-Resume.html"
                    class="inline-block bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg transition">
                     Download Java Resume
-                </a>
+                </a> -->
             </div>
             <p class="text-sm text-gray-500 mt-4">
 <!--                 (Note: Resume files are placeholders. Please replace `/Aditya-Barve-PHP-Resume.pdf` and `/Aditya-Barve-Java-Resume.pdf` with your actual resume file paths.) -->
@@ -550,6 +550,7 @@
     </script>
 </body>
 </html>
+
 
 
 
